Fixed: Logo doesn't scale well on mobile view (bug#12749).

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Responsive.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Responsive.css
@@ -107,7 +107,7 @@
 
     #Header #Logo {
         width: 208px !important;
-        background-size: 100%;
+        background-size: contain;
         position: static;
         margin: -2px auto 0px auto;
         background-position: center;
